--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+// @mixin onTablet {
+//   @media (min-width: 744px) {
+//     @content;
+//   }
+// }
+
 @mixin top-actions {
   --icon-width: 18px;
 
